# lyxgc.rs

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  build.rs  quickstart.ps1  quickstart.sh  sample.tex
.github/workflows/: release.yml
include/: lyxgc.h
src/: capi.rs  chktex_ffi.rs  chktex_parse.rs  engine.rs  lacheck_ffi.rs  lacheck_parse.rs  lang.rs  lib.rs  main.rs  registry.rs  report.rs  rules.rs  tokenizer.rs
tests/: integration.rs
