[package]
name = "lyxgc"
version = "0.1.0"
edition = "2021"
description = "Grammar checker for LyX and LaTeX (Rust frontend)"

[features]
default = ["chktex"]
chktex = []

[build-dependencies]
cc = "1.0"

[dependencies]
regex = "1.10"
fancy-regex = "0.12"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
lto = true

[lib]
name = "lyxgc"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "chktex"
path = "src/main.rs"
