[package]
name = "lyxgc"
version = "0.1.0"
edition = "2021"
description = "Grammar checker for LyX and LaTeX (Rust frontend)"

[features]
default = ["chktex"]
chktex = []

[build-dependencies]
cc = "1.0"

[dependencies]
regex = "1.10"
fancy-regex = "0.12"
lazy_static = "1.4"
miniserde = "0.1"
lexopt = "0.3"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1

[lib]
name = "lyxgc"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "chktex"
path = "src/main.rs"
